--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,13 @@
 
     <string name="OK">OK</string>
     <string name="cancel">Cancel</string>
+    
+    <!-- Validation error messages for EditText -->
+    <string name="editText_validation_error_empty_field">The field cannot be empty</string>
+    <string name="editText_validation_error_numbers_only">Only numbers are allowed on this field</string>
+    <string name="editText_validation_error_alpha_only">Only letters and spaces are allowed on this field</string>
+    <string name="editText_validation_error_pipe_char_not_allowed">Pipe character (&quot;|&quot;) not allowed</string>
+    
     <string name="app_name">Geo Salesman</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
@@ -27,14 +34,17 @@
 
     <string name="spinner_question_type_prompt">Question type</string>
 
+    <string name="spinner_question_default_option">Question type</string>
+    
     <string-array name="question_type_options">
+        <!-- This one must be equal to spinner_question_default_option -->
         <item>Question type</item>
         <item>Yes/No</item>
         <item>Multiple choice answer</item>
         <item>Open</item>
         <item>Scale</item>
     </string-array>
-    
+    <string name="spinner_question_error_no_option_chosen">Please choose a question type</string>
     <string name="type_question_title">Type the question title</string>
     <string name="type_question_description">Type question description</string>
     <string name="type_your_question">Type the question</string>
