--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="settings_short_description">Settings</string>
     <string name="title_activity_show_questions">ShowQuestions</string>
     <!-- Questions menu -->
-    <string name="add_new_question">Add new question</string>
+    <string name="activity_show_questions_add_new_question">Add new question</string>
     <string name="no_questions_found">No questions found</string>
     <string name="tap_question_menu_to_add">Use the menu to add one</string>
     <string name="title_activity_add_new_question">AddNewQuestion</string>
