--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,9 @@
 
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="select">Select</string>
+    <string name="delete">Delete</string>
+    
     <string name="delete_items">Delete items</string>
     <string name="add_item">Add item</string>
     <string name="select_items">Select items</string>
