another fast commit

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -131,5 +131,6 @@
         <b>Answer: </b>$answer
         </p>]]>
     </string>
+    <string name="title_activity_location">Location</string>
 
 </resources>
