--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -121,8 +121,18 @@
     <string name="set_report_template">Tap to set the report template</string>
     <string name="title_activity_answer_questions">Answer Questions</string>
     <string name="write_your_answer_here">Write your answer here</string>
+    <string name="select_report_template">Select report template</string>
     <string name="send">Send</string>
     <string name="tap_to_set_location">Tap to set location</string>
+    <string name="report_details">
+<![CDATA[<p>
+		<b>Report Details <br>
+		<b>Report comments:  </b>$report_comments<br>
+		<b>Client:  </b>$report_client<br>
+		<b>Report template name and description: </b>$report_template_name_and_description<br>
+        </p>
+        ]]>
+    </string>
     <string name="question_report_answer">
 <![CDATA[<p>
         <b>Question Title: </b>$question_title<br>
